# oop-3sem

./: .gitmodules  .~lock.Лаба_1.doc#  Лаба_1.doc
01-realnums/: CMakeLists.txt  list.h  main.cpp
01-realnums/real/: real.cpp  real.h
02-rzd/: CMakeLists.txt
02-rzd/cars/: cars.h
cpp-01-realnums/: main.cpp
cpp-01-realnums/real/: arithmetic.cpp  comparators.cpp  utils.cpp
cpp-02-rzd/: CMakeLists.txt  main.cpp
cpp-02-rzd/cars/: car.cpp  car.h  cars.h  coach.cpp  coach.h  compartment.cpp  compartment.h  couchette.cpp  couchette.h
cpp-02-rzd/cars/components/: seat.cpp  seat.h  toilet.cpp  toilet.h
cpp-02-rzd/cars/errors/: car_error.h  toilet_error.h
cpp-02-rzd/utils/: vector.h  vector_error.h
cpp-03-exceptions/: CMakeLists.txt  main.cpp
cpp-03-exceptions/errors/: error.cpp  error.h  file_error.cpp  file_error.h  memory_error.cpp  memory_error.h
cpp-03-exceptions/real/: arithmetic_int.cpp  real.cpp  real.h  utils.cpp
pidaras/: CMakeLists.txt  main.cpp
pidaras/cars/: car.cpp  car.h  cars.h  coach.cpp  coach.h  compartment.cpp  compartment.h  couchette.cpp
pidaras/cars/components/: seat.cpp  seat.h  toilet.h
pidaras/cars/errors/: car_error.h
pidaras/utils/: vector.cpp  vector_error.cpp  vector_error.h
sharp-01-03-strange_calculator2/StrangeCalculator/: MainWindow.cs
sharp-02/: main.cs  Лаба 2.doc
sharp-02-strange_calculator/StrangeCalculator/: Calculator.cs  MainWindow.cs  StrangeCalculator.sln  Variable.cs
sharp-03/: .~lock.Лаба 3.doc#  OOP.7z  Лаба 3.doc
sharp-03/Matrix/: Matrix.cs  Program.cs
sharp-03/OOP/: OOP.sln
sharp-03/OOP/OOP/: Program.cs
sharp-04/: .~lock.Лаба 4 (1).doc#  Лаба 4 (1).doc
sharp-05/: PhotoshopKiller.csproj
(+3 files in other folders)
